manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 82265630-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: app-82265630.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: my-82265630
            port:
              number: 8080
        pathType: Prefix
